feat: add vant-ui config

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "stylelint-less": "^1.0.6",
     "stylelint-order": "^6.0.3",
     "typescript": "^5.0.2",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.0",
     "vue-tsc": "^1.2.0"
   }
